Correction row gap logement tags

--- a/src/styles/Logement/Logement.scss
+++ b/src/styles/Logement/Logement.scss
@@ -79,7 +79,7 @@
     &__tags
     {
         @include flexCustom(row,flex-start,flex-start,wrap);
-        column-gap: 10px;
+        @include rowGapColumnGap(5px,10px);
         margin-top: 30px;
         max-width: 635px;
         width: 635px;
@@ -87,7 +87,6 @@
         @media(max-width: 1092px)
         {
             @include fullWidthMaxWidth100;
-            row-gap: 5px;
             margin-top: 15px;
             order: -2;
         }
